--- a/tmbstan/DESCRIPTION
+++ b/tmbstan/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: tmbstan
 Type: Package
-Title: What the package does (short line)
+Title: MCMC sampling from TMB model object using STAN
 Version: 1.0
 Date: 2017-09-02
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
-Depends: rstan
-LinkingTo: StanHeaders (>= 2.14.0), rstan (>= 2.14.1), BH (>= 1.62.0),
-        Rcpp (>= 0.12.0), RcppEigen, TMB
+Author: Kasper Kristensen
+Maintainer: Kasper Kristensen <kaskr@dtu.dk>
+Description: MCMC sampling from TMB model object using STAN.
+Imports: methods, Rcpp
+Depends:
+    rstan, TMB
+LinkingTo: StanHeaders, rstan, BH, Rcpp, RcppEigen, TMB
+License: GPL (>= 3)
 NeedsCompilation: yes
+RoxygenNote: 5.0.1
