--- a/tmbstan/NAMESPACE
+++ b/tmbstan/NAMESPACE
@@ -4,6 +4,7 @@ export(tmbstan)
 importClassesFrom(rstan,stanmodel)
 importFrom(Rcpp,loadModule)
 importFrom(TMB,runExample)
+importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,setClass)
 importMethodsFrom(rstan,sampling)
