--- a/tmbstan/DESCRIPTION
+++ b/tmbstan/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: tmbstan
 Type: Package
-Title: MCMC Sampling from TMB Model Object using Stan
+Title: MCMC Sampling from 'TMB' Model Object using Stan
 Version: 1.0
 Date: 2017-12-11
 Author: Kasper Kristensen
 Maintainer: Kasper Kristensen <kaskr@dtu.dk>
-Description: MCMC sampling from TMB model object using Stan.
+Description: Enables all 'rstan' functionality for a 'TMB' model object, in particular MCMC sampling and chain visualization. Sampling can be performed with or without Laplace approximation for the random effects.
 Imports: methods, Rcpp
 Depends:
     rstan, TMB (>= 1.7.12)
