--- a/tmbstan/NAMESPACE
+++ b/tmbstan/NAMESPACE
@@ -4,8 +4,8 @@ export(tmbstan)
 importClassesFrom(rstan,stanmodel)
 importFrom(Rcpp,loadModule)
 importFrom(TMB,runExample)
-importFrom(methods,as)
 importFrom(methods,new)
+importFrom(methods,selectMethod)
 importFrom(methods,setClass)
 importMethodsFrom(rstan,sampling)
 useDynLib(tmbstan, .registration=TRUE)
