GNU Make required by f78f69116c29866d963344df234de3642b4224c6

--- a/tmbstan/DESCRIPTION
+++ b/tmbstan/DESCRIPTION
@@ -13,4 +13,5 @@ LinkingTo: StanHeaders, rstan, BH, Rcpp, RcppEigen, TMB, RcppParallel
 License: GPL (>= 3)
 BugReports: https://github.com/kaskr/tmbstan/issues
 NeedsCompilation: yes
+SystemRequirements: GNU make
 RoxygenNote: 7.1.2
