--- a/tmbstan/DESCRIPTION
+++ b/tmbstan/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.0.3
 Date: 2021-12-14
 Author: Kasper Kristensen
 Maintainer: Kasper Kristensen <kaskr@dtu.dk>
-Description: Enables all 'rstan' functionality for a 'TMB' model object, in particular MCMC sampling and chain visualization. Sampling can be performed with or without Laplace approximation for the random effects.
+Description: Enables all 'rstan' functionality for a 'TMB' model object, in particular MCMC sampling and chain visualization. Sampling can be performed with or without Laplace approximation for the random effects. This is demonstrated in Monnahan & Kristensen (2018) <DOI:10.1371/journal.pone.0197954>.
 Imports: methods, Rcpp
 Depends:
     rstan, TMB (>= 1.7.12)
