--- a/tmbstan/DESCRIPTION
+++ b/tmbstan/DESCRIPTION
@@ -13,5 +13,5 @@ LinkingTo: StanHeaders, rstan, BH, Rcpp, RcppEigen, TMB, RcppParallel
 License: GPL (>= 3)
 BugReports: https://github.com/kaskr/tmbstan/issues
 NeedsCompilation: yes
-SystemRequirements: GNU make
+SystemRequirements: GNU make, C++14
 RoxygenNote: 7.2.3
