--- a/tmbstan/DESCRIPTION
+++ b/tmbstan/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: tmbstan
 Type: Package
 Title: MCMC Sampling from 'TMB' Model Object using 'Stan'
-Version: 1.0.6
-Date: 2023-03-21
+Version: 1.0.7
+Date: 2023-03-24
 Author: Kasper Kristensen
 Maintainer: Kasper Kristensen <kaskr@dtu.dk>
 Description: Enables all 'rstan' functionality for a 'TMB' model object, in particular MCMC sampling and chain visualization. Sampling can be performed with or without Laplace approximation for the random effects. This is demonstrated in Monnahan & Kristensen (2018) <DOI:10.1371/journal.pone.0197954>.
@@ -13,5 +13,5 @@ LinkingTo: StanHeaders, rstan, BH, Rcpp, RcppEigen, TMB, RcppParallel
 License: GPL (>= 3)
 BugReports: https://github.com/kaskr/tmbstan/issues
 NeedsCompilation: yes
-SystemRequirements: GNU make, C++14
+SystemRequirements: GNU make
 RoxygenNote: 7.2.3
